# absurd-sqlite

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci-absurd-sqlite-extension.yml  ci-sdks.yml  ci-standalone.yml  docs-pages.yml  release-absurd-sqlite-extension.yml  release-extension.yml  release-npm-sdks.yaml  release-standalone.yml
absurd-sqlite-deno-builder/: Cargo.toml
absurd-sqlite-deno-builder/src/: graph.rs  lib.rs
absurd-sqlite-deno-runtime/: .gitignore  AGENTS.md  Cargo.toml  build.rs
absurd-sqlite-deno-runtime/deno-main/: deno.json  main.ts
absurd-sqlite-deno-runtime/deno-main/sdks/: deno
absurd-sqlite-deno-runtime/samples/: deno.json  hello.ts
absurd-sqlite-deno-runtime/src/: deno_rt.rs  main.rs
absurd-sqlite-deno-runtime/src/deno-main/: deno.json  main.ts
absurd-sqlite-extension/: AGENTS.md  Cargo.toml  build.rs
absurd-sqlite-extension/benches/: cleanup.rs
absurd-sqlite-extension/migrations/: 1.sql  2.sql
absurd-sqlite-extension/src/: checkpoint.rs  claim.rs  event.rs  lib.rs  migrate.rs  migrations.rs  queue.rs  retry.rs  run.rs  settings.rs  spawn.rs  sql.rs  validate.rs
absurd-sqlite-extension/tests/: integration.rs
assets/: generate-icon.sh
assets/absurd-sqlite-standalone.icon/: icon.json
docs-starlight/: astro.config.mjs  package-lock.json  package.json
docs-starlight/src/content/docs/concepts/: absurd-sqlite.mdx  absurd-workflow.mdx  durable-workflow.mdx
docs-starlight/src/content/docs/faq/: ai-use-disclaimer.md
docs-starlight/src/content/docs/reference/: sqlite-functions.mdx
docs-starlight/src/content/docs/sdks/: typescript.mdx
docs/specs/: queue-cleanup-ui.md  standalone-worker-process.md
samples/bun-worker/: README.md  package.json  tsconfig.json
samples/bun-worker/src/: index.ts
samples/deno-client/: deno.json  main.ts
samples/typescript-client/: package-lock.json  package.json  tsconfig.json
samples/typescript-client/src/: index.ts
sdks/bun-worker/: README.md  package-lock.json  package.json  tsconfig.json
sdks/bun-worker/src/: extension-downloader.ts  index.ts  sqlite.ts
sdks/bun-worker/test/: basic.test.ts  cli.test.ts  events.test.ts  hooks.test.ts  idempotent.test.ts  index.test.ts  retry.test.ts  run.test.ts  setup.ts  sqlite.test.ts  step.test.ts  wait-for.ts  worker.test.ts
sdks/deno/: README.md  absurd-base.ts  absurd-types.ts  deno.json  driver.ts  mod.ts  sqlite-types.ts  sqlite.ts
sdks/deno/test/: basic.test.ts  events.test.ts  hooks.test.ts  idempotent.test.ts  index.test.ts  retry.test.ts  setup.ts  sqlite.test.ts  step.test.ts  utils.ts  worker.test.ts
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript-types/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdks/typescript-types/src/: index.ts
sdks/typescript/examples/: download-extension.ts
sdks/typescript/src/: absurd-base.ts  absurd-types.ts  absurd.ts  extension-downloader.ts  index.ts  sqlite-connection.ts  sqlite-types.ts  sqlite.ts  temporal-types.ts
sdks/typescript/test/: basic.test.ts  events.test.ts  extension-downloader.test.ts  hooks.test.ts  idempotent.test.ts  index.test.ts  retry.test.ts  setup.ts  sqlite.test.ts  step.test.ts  temporal-types.test.ts
standalone/: AGENTS.md  README.md  package.json
standalone/src/: app.css  app.html
standalone/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
standalone/src-tauri/capabilities/: default.json  desktop.json
standalone/src-tauri/icons/: icon.icns
standalone/src-tauri/src/: db.rs  db_commands.rs  dev_api.rs  lib.rs  main.rs  worker.rs
standalone/src-tauri/src/ui/: tray.rs
standalone/src/lib/components/: Button.svelte  JsonBlock.svelte  SelectField.svelte
standalone/src/lib/providers/: absurdData.ts
standalone/src/routes/: +layout.svelte  +page.svelte
standalone/src/routes/events/: +page.svelte
standalone/src/routes/queues/: +page.svelte
standalone/src/routes/settings/: +page.svelte
standalone/src/routes/tasks/: +page.svelte
standalone/src/routes/tasks/[taskId]/: +page.svelte
