[package]
build = "build.rs"
edition = "2024"
name = "absurd_sqlite_deno_runtime"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
deno_ast = { version = "0.52.0", features = ["transpiling"] }
deno_core = "0.376.0"
deno_error = "0.7.3"
deno_graph = "0.105.0"
deno_npm = "0.42.2"
deno_semver = "0.9.1"
eszip = "0.106.0"
futures = "0.3.31"
import_map = "0.24.0"
reqwest = "0.13.1"
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[build-dependencies]
absurd_sqlite_deno_builder = { path = "../absurd-sqlite-deno-builder" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
