[package]
edition = "2021"
name = "absurd_sqlite_extension"
version = "0.1.0"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
name = "absurd"

[dependencies]
sqlite-loadable = { version = "0.0.6-alpha.6", features = ["exec"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "v7", "fast-rng"] }
sqlite3ext-sys = "0.0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
rusqlite = { version = "0.38", features = ["load_extension", "bundled"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
