[package]
build = "build.rs"
edition = "2021"
name = "absurd_sqlite_extension"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "absurd"

[dependencies]
chrono = {version = "0.4", default-features = false, features = ["std"]}
serde_json = "1.0"
sqlite-loadable = {version = "0.0.6-alpha.6", features = ["exec"]}
sqlite3ext-sys = "0.0.1"
uuid = {version = "1.7", features = ["v4", "v7", "fast-rng"]}

[dev-dependencies]
rusqlite = {version = "0.38", features = ["load_extension", "bundled"]}
