[package]
name = "standalone"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "standalone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
anyhow = "1.0.100"
tauri-plugin-log = "2"
log = "0.4.29"
tokio = "1.48.0"
rusqlite = { version = "0.38.0", features = ["bundled", "load_extension"] }
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["clock"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
