[package]
authors = ["me@hbc.rocks"]
description = "Standalone Tauri application for Absurd SQLite"
edition = "2021"
name = "AbsurdSQLite"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "standalone_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
axum = "0.7"
chrono = {version = "0.4", features = ["clock"] }
log = "0.4.29"
rusqlite = {version = "0.38.0", features = ["bundled", "load_extension"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = "1.48.0"
tower-http = {version = "0.5", features = ["cors"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
